<resources>
    <string name="app_name">Unit Converter</string>
    <string name="unit_query">Please specify unit system to convert to</string>
    <string name="amount_query">Enter amount</string>
    <string name="input_hint">Select measurement</string>
    <string name="US_choice">US</string>
    <string name="metric_choice">Metric</string>
    <string name="convert">Convert</string>
    <string name="result">0</string>
    <string name="toast_empty">Please enter the amount, unit system and select the measurement.</string>
    <string name="toast_just_amount">Please enter the unit system and measurement.</string>
    <string name="toast_amount">Please enter the amount.</string>
    <string name="toast_unit">Please specify a unit system to convert to</string>
    <string name="toast_convert">Please select the conversion choices.</string>
    <string name="toast_mismatch">Your measurement choice and unit system don\'t match.</string>
    <array name="metric_units">
        <item name="milliliters">fluid ounces to milliliters</item>
        <item name="liters">quarts to liters</item>
        <item name="grams">ounces to grams</item>
        <item name="kilograms">pounds to kilograms</item>
        <item name="Celsius">Fahrenheit to Celsius</item>
    </array>

    <array name="US_units">
        <item name="fluid ounces">milliliters to fluid ounces</item>
        <item name="quarts">liters to quarts</item>
        <item name="ounces">grams to ounces</item>
        <item name="pounds">kilograms to pounds</item>
        <item name="Fahrenheit">Celsius to Fahrenheit</item>
    </array>
</resources>